--- a/Repetições/exercicosnapratica2/index.html
+++ b/Repetições/exercicosnapratica2/index.html
@@ -11,7 +11,7 @@
     <div style="color: aliceblue;"><h1>Tabuada</h1></div>
     <section>
        <div>
-         <p>Número: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar tabuada" onclick="tabuada()"></p>
+         <p>Número: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar tabuada" onclick="tabuada()" id="button"></p>
        </div>
        <div>
            <select name="tabuada" id="seltab" size="10">
